--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
 
 
     <!-- Font Favicon -->
-    <link rel="shortcut icon" href="../public/images/favicon.ico">
+    <link rel="shortcut icon" href="">
     
 </head>
 
