--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
 
 
     <!-- Font Favicon -->
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="images/favicon.ico">
     
 </head>
 
@@ -324,9 +324,14 @@
 
                     <h3>Skills and Education</h3>
 
-                    <p>Utise wisi enim minim veniam, quis et stationes ullamcorper nets suscipit ets lobotis nisle consequat nihis etim. Quis autem velis ets reprehender net etid quiste voluptate velite esse sedis.</p>
+                    <p>I'm a physiology student from the University of Ibadan.</p>
 
-                    <p>Velis demo enim ipsam voluptatem quia voluptas sit aspernatures netsum norems fugit, seditum netis velas matrix net nesciunt.</p>
+                    <li>Well skilled in Nodejs</li>
+                    <li>MongoDB</li>
+                    <li>Bootstrap</li>
+                    <li>React</li>
+                    <li>And lots more as regards your request.</li>
+
                 
                     <a href="#gallery" class="btn-red small scrool">Discover My Work</a>
 
@@ -425,12 +430,16 @@
             <div class="row">
 
                 <!--begin col-md-4 -->
+                
+                <!--end col-md-4 -->
+
+                <!--begin col-md-4 -->
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
                             <a class="popup2" href="http://placehold.it/555x370">
-                                <img src="http://placehold.it/555x370" class="width-100" alt="pic">
+                                <img src="https://th.bing.com/th/id/OIP.Th7FPFBYpYK6_lGEi-K1iAHaHa?pid=ImgDet&rs=1" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
                         </div>
@@ -440,33 +449,7 @@
                 <!--end col-md-4 -->
 
                 <!--begin col-md-4 -->
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <figure class="gallery-insta">
-                        <!--begin popup-gallery-->
-                        <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x370">
-                                <img src="http://placehold.it/555x370" class="width-100" alt="pic">
-                                <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
-                            </a>
-                        </div>
-                        <!--end popup-gallery-->
-                    </figure>
-                </div>
-                <!--end col-md-4 -->
-
-                <!--begin col-md-4 -->
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <figure class="gallery-insta">
-                        <!--begin popup-gallery-->
-                        <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x370">
-                                <img src="http://placehold.it/555x370" class="width-100" alt="pic">
-                                <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
-                            </a>
-                        </div>
-                        <!--end popup-gallery-->
-                    </figure>
-                </div>
+                
                 <!--end col-md-4 -->
 
                 <!--begin col-md-4 -->
