--- a/views/home.ejs
+++ b/views/home.ejs
@@ -108,9 +108,9 @@
 	            <!--begin col-md-6-->
 	            <div class="col-md-6">
 
-	          		<h1>Hi. <span class="red">I'm Hudhayfah</span>. I design awesome websites.</h1>
+	          		<h1>Hi. <span class="red">I'm Hudhayfah</span>, A passionate software engineer .</h1>
 
-	          		<p class="hero-text">I am a website designer based in Ibadan, Oyo State , Nigeria.</p>
+	          		<p class="hero-text">Open to all related works, volunteer and collaboration.</p>
 
                     <!--begin popup-video-wrapper-->
                     <div class="popup-gallery-wrapper">
@@ -125,7 +125,7 @@
                         </div>
                         <!--end popup-video-->
 
-                        <p class="popup-video-text">Watch Presentation Video</p>
+                        <p class="popup-video-text">My story</p>
 
                     </div>
                     <!--end popup-video-wrapper-->
@@ -177,13 +177,13 @@
 
                             <i class="pe-7s-medal"></i>
 
-                            <h4>Website Design</h4>
+                            <h4>Software Development</h4>
 
-                            <p>Get awesome and attractive web pages.</p>
+                            <p>Get high scalable software to your satisfaction</p>
                             
                         </div>
 
-                    </div>
+                    </div> 
                     <!--end col-md-4 -->
 
                     <!--begin col-md-4 -->
@@ -209,9 +209,9 @@
 
                             <i class="pe-7s-umbrella"></i>
 
-                            <h4>Online Marketing</h4>
+                            <h4>Website Design</h4>
 
-                            <p>Get your products on airs with awesome websites.</p>
+                            <p>Get awesome and attractive web pages.</p>
                             
                         </div>
 
@@ -258,7 +258,7 @@
 
                     <h3>A little about me</h3>
 
-                    <p>I am a passion-driven developer who help designers, small agencies and businesses bring their ideas to life. I turn your requirements into amazing websites - on time and on budget.</p>
+                    <p>I am a passion-driven developer who help designers, small agencies and businesses bring their ideas to life. I turn your requirements into amazing websites - on time and on budget.<br>I've got about 3 years of experience with javascript and I've volunteered in many projects that needs outright attention to</p>
                     
                     <ul class="benefits">
                         <li><i class="fas fa-check"></i> Determined.</li>
@@ -286,8 +286,8 @@
 
                             <ul class="freelancer-details">
                                 <li><span class="freelancer-main-details">Phone</span><span class="freelancer-second-details">+2349053688477</span></li>
-                                <li><span class="freelancer-main-details">Email</span><span class="freelancer-second-details myemail">hoismail2017@gmail.com</span></li>
-                                <li><span class="freelancer-main-details">LinkedIn</span><a href="#" target="_blank"><span class="freelancer-second-details">Ismail Hudhayfah</span></a></li>
+                                <li><span class="freelancer-main-details">Email</span><a href="mailto:hoismail2017@gmail.com"><span class="freelancer-second-details myemail">hoismail2017@gmail.com</span></a> </li>
+                                <li><span class="freelancer-main-details">LinkedIn</span><a href="https://www.linkedin.com/in/hudhayfah-ismail-2241711b5/" target="_blank"><span class="freelancer-second-details">Hudhayfah Ismail</span></a></li>
                             </ul>
 
                         </div>
@@ -296,7 +296,7 @@
                     </div>
                     <!--end row-->
                     
-                    <a href="#" class="btn-red small scrool">Download CV</a>
+                    <a href="#" class="btn-red small scrool">Download Resume</a>
 
                 </div>
                 <!--end col-md-6-->
@@ -324,7 +324,7 @@
 
                     <h3>Skills and Education</h3>
 
-                    <p>I'm a physiology student from the University of Ibadan.</p>
+                    <p>A physiology student from the University of Ibadan.</p>
 
                     <li>Well skilled in Nodejs</li>
                     <li>MongoDB</li>
@@ -352,23 +352,30 @@
                         </li>
                         
                         <li>
-                            <p>jQuery <span>90%</span></p>
+                            <p>javaScript <span>80%</span></p>
                             <div class="progress" style="height: 20px;">
-                                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <p>TypeScript <span>80%</span></p>
+                            <div class="progress" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </li>
                         
                         <li>
-                            <p>Nodejs <span>75%</span></p>
+                            <p>Nodejs <span>85%</span></p>
                             <div class="progress" style="height: 20px;">
-                                <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </li>
                         
                         <li>
-                            <p>React <span>40%</span></p>
+                            <p>React <span>60%</span></p>
                             <div class="progress" style="height: 20px;">
-                                <div class="progress-bar" role="progressbar" style="width: 40%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </li>
                         
@@ -376,6 +383,20 @@
                             <p>Bootstrap <span>90%</span></p>
                             <div class="progress" style="height: 20px;">
                                 <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <p>MongoDB <span>80%</span></p>
+                            <div class="progress" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </li>
+
+                        <li>
+                            <p>SQL <span>55%</span></p>
+                            <div class="progress" style="height: 20px;">
+                                <div class="progress-bar" role="progressbar" style="width: 55%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </li>
 
@@ -531,7 +552,7 @@
                     
                     <i class="far fa-gem"></i>
                     
-                    <p class="fun-facts-title"><span class="facts-numbers">1050+</span><br>Projects Completed</p>
+                    <p class="fun-facts-title"><span class="facts-numbers"></span><br>Projects Completed</p>
                     
                 </div>
                 <!--end fun-facts-box -->
@@ -541,7 +562,7 @@
                     
                     <i class="far fa-heart"></i>
                                                
-                    <p class="fun-facts-title"><span class="facts-numbers">217k</span><br>Happy Clients</p>
+                    <p class="fun-facts-title"><span class="facts-numbers"></span><br>Happy Clients</p>
                         
                 </div>
                 <!--end fun-facts-box -->
@@ -551,7 +572,7 @@
                     
                     <i class="fas fa-award"></i>
                                                
-                    <p class="fun-facts-title"><span class="facts-numbers">1210</span><br>Design Awards</p>
+                    <p class="fun-facts-title"><span class="facts-numbers"></span><br>Design Awards</p>
                         
                 </div>
                 <!--end fun-facts-box -->
@@ -561,7 +582,7 @@
                     
                     <i class="fas fa-anchor"></i>
                                                
-                    <p class="fun-facts-title"><span class="facts-numbers">2137</span><br>Line Of Codes</p>
+                    <p class="fun-facts-title"><span class="facts-numbers"></span><br>Line Of Codes</p>
                         
                 </div>
                 <!--end fun-facts-box -->
@@ -578,14 +599,14 @@
     <!--begin section-white -->
     <section class="section-white no-padding" id="contact">
         
-        <!--begin container-->
+        <!-- begin container -->
         <div class="container-fluid px-0">
 
             <!--begin row-->
             <div class="row no-gutters align-items-center">
             
                 <!--begin col-md-6-->
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
 
                     <img src="https://hng-stage-2-task.herokuapp.com/images/HNG.png" class="bottom-margins-images width-100" alt="Happy">
                     <br><br><br>
@@ -595,7 +616,7 @@
                         <a href="https://training.zuri.team/">https://training.zuri.team/</a>
                     </span>
 
-                </div>
+                </div> -->
                 <!--end col-sm-6-->
                 
                 <!--begin col-md-6-->
@@ -623,7 +644,7 @@
 
                             <textarea class="contact-commnent white-input" rows="2" cols="20" name="message" placeholder="Your Message..."></textarea>
 
-                            <!-- <input value="Get In Touch" id="submit-button" class="contact-submit" type="submit"> -->
+                            <input value="Get In Touch" id="submit-button" class="contact-submit" type="submit"> -->
                             <!-- <button class="btn btn-success">Add Campground</button> -->
 
                         <!-- </form> -->
