--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,7 +58,7 @@
                     <div class="navbar-collapse collapse" id="navbarCollapse" style="color: #000;">
                         
                         <!--begin navbar-nav -->
-                        <ul class="navbar-nav ml-auto">
+                        <ul class="ml-auto navbar-nav">
 
                             <li><a href="#home">Home</a></li>
 
@@ -155,7 +155,7 @@
                 <div class="row">
 
                     <!--begin col-md-12-->
-                    <div class="col-md-12 text-center">
+                    <div class="text-center col-md-12">
 
                         <h2 class="section-title">What I do the best</h2>
 
@@ -273,7 +273,7 @@
                         <div class="col-md-6">
 
                             <ul class="freelancer-details">
-                                <li><span class="freelancer-main-details">Location</span><span class="freelancer-second-details">Oyo State, Nigeria</span></li>
+                                <li><span class="freelancer-main-details">Location</span><span class="freelancer-second-details">Lagos State, Nigeria</span></li>
                                 <li><span class="freelancer-main-details">Age</span><span class="freelancer-second-details">23 yrs</span></li>
                                 <li><span class="freelancer-main-details">Freelance</span><span class="freelancer-second-details">Available</span></li>
                             </ul>
@@ -429,7 +429,7 @@
             <div class="row">
         
                 <!--begin col-md-12 -->
-                <div class="col-md-12 text-center padding-bottom-30">
+                <div class="text-center col-md-12 padding-bottom-30">
 
                     <h2 class="section-title">A selection of my work</h2>
 
@@ -448,9 +448,23 @@
         <div class="container">
 
             <!--begin row-->
-            <div class="row">
+            <div class="row d-flex align-items-stretch">
 
                 <!--begin col-md-4 -->
+                
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <figure class="gallery-insta">
+                        <!--begin popup-gallery-->
+                        <div class="popup-gallery popup-gallery-rounded portfolio-pic img-thumbnail img-fluid">
+                            <a class="popup2" href="https://election-chum-final.vercel.app/">
+                                <img src="../public/images/ElectionChum.png" class="width-100" alt="pic">
+                                <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
+                            </a>
+                        </div>
+                        <p class="section-subtitle">Elect</p>
+                        <!--end popup-gallery-->
+                    </figure>
+                </div>
                 
                 <!--end col-md-4 -->
 
@@ -498,7 +512,7 @@
             <div class="row">
         
                 <!--begin col-md-12 -->
-                <div class="col-md-12 text-center padding-top-10">
+                <div class="text-center col-md-12 padding-top-10">
 
                     <p class="follow-instagram">Coming soon!!!</p>
                   
@@ -534,7 +548,7 @@
             <div class="row">
             
                 <!--begin col md 7 -->
-                <div class="col-md-7 mx-auto margin-bottom-20 text-center">
+                <div class="mx-auto text-center col-md-7 margin-bottom-20">
 
                     <h3 class="white-text">Fun Facts About My Work</h3>
 
@@ -548,7 +562,7 @@
             <div class="row">
         
                 <!--begin fun-facts-box -->
-                <div class="col-md-2 offset-md-2 fun-facts-box text-center">
+                <div class="text-center col-md-2 offset-md-2 fun-facts-box">
                     
                     <i class="far fa-gem"></i>
                     
@@ -558,7 +572,7 @@
                 <!--end fun-facts-box -->
 
                 <!--begin fun-facts-box -->
-                <div class="col-md-2 fun-facts-box text-center">
+                <div class="text-center col-md-2 fun-facts-box">
                     
                     <i class="far fa-heart"></i>
                                                
@@ -568,7 +582,7 @@
                 <!--end fun-facts-box -->
 
                 <!--begin fun-facts-box -->
-                <div class="col-md-2 fun-facts-box text-center">
+                <div class="text-center col-md-2 fun-facts-box">
                     
                     <i class="fas fa-award"></i>
                                                
@@ -578,7 +592,7 @@
                 <!--end fun-facts-box -->
 
                 <!--begin fun-facts-box -->
-                <div class="col-md-2 fun-facts-box text-center">
+                <div class="text-center col-md-2 fun-facts-box">
                     
                     <i class="fas fa-anchor"></i>
                                                
@@ -600,7 +614,7 @@
     <section class="section-white no-padding" id="contact">
         
         <!-- begin container -->
-        <div class="container-fluid px-0">
+        <div class="px-0 container-fluid">
 
             <!--begin row-->
             <div class="row no-gutters align-items-center">
@@ -692,7 +706,7 @@
             
             
                 <!--begin col-md-12 -->
-                <div class="col-md-12 text-center">
+                <div class="text-center col-md-12">
                    
                     <p>Copyright © 2021 <span class="template-name">Hudhayfah</span>. </p>
                     
